--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <!--update every instance of 'Joywave'      -->
-    <title>A Ji Birthday 2025 Heardle</title>
+    <title>Infinite Version For A Ji</title>
     <meta itemprop="name" content="Infinite Heardle" />
 
     <meta
